--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular-animate": "~1.5.3",
+    "angular-aside": "~1.3.2",
     "angular-cookies": "~1.5.3",
     "angular-sanitize": "~1.5.3",
     "angular-resource": "~1.5.3",
@@ -13,7 +14,8 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "components-font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
