--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "gulp test"
   },
   "devDependencies": {
+    "angular-aside": "~1.3.2",
     "estraverse": "~4.1.0",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~3.0.2",
