--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
-    "components-font-awesome": "^4.7.0"
+    "components-font-awesome": "^4.7.0",
+    "angular-hamburger-toggle": "^0.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
