--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-aside": "~1.3.2",
     "angular-cookies": "~1.5.3",
     "angular-sanitize": "~1.5.3",
+    "angular-spinner": "~0.6.1",
     "angular-resource": "~1.5.3",
     "angular-ui-router": "~0.2.15",
     "bootstrap-sass": "~3.3.5",
@@ -16,7 +17,8 @@
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
     "components-font-awesome": "^4.7.0",
-    "angular-hamburger-toggle": "^0.2.0"
+    "angular-hamburger-toggle": "^0.2.0",
+    "angular-ui-carousel": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
