--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular": "~1.5.3",
     "components-font-awesome": "^4.7.0",
     "angular-hamburger-toggle": "^0.2.0",
-    "angular-ui-carousel": "*"
+    "angular-ui-carousel": "*",
+    "angular-simple-carousel": "^1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
